# skydel-plug-ins

./: .clang-format  .gitignore  CMakeLists.txt  README.md  skydel_plugin.pro
.github/: ubuntu_build.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: style_check.yml  ubuntu_build.yml  ubuntu_cmake_build.yml  ubuntu_qmake_build.yml  windows_build.yml  windows_cmake_build.yml  windows_qmake_build.yml
cmake/: SkydelPlugInConfig.cmake.in  SkydelPluginConfig.cmake.in
examples/: CMakeLists.txt  common.pri  examples.pro
examples/hil_observer_plugin/: CMakeLists.txt  hil_logger.cpp  hil_logger.h  hil_observer_plugin.cpp  hil_observer_plugin.h  hil_observer_plugin.json  hil_observer_plugin.pro  hil_observer_view.cpp  hil_observer_view.h  hil_observer_view.ui
examples/imu_plugin/: CMakeLists.txt  imu_configuration.h  imu_data_format.h  imu_dynamic.h  imu_logger.cpp  imu_logger.h  imu_plugin.cpp  imu_plugin.h  imu_plugin.pro  imu_view.h  imu_view.ui
examples/position_observer_plugin/: CMakeLists.txt  position_logger.cpp  position_logger.h  position_observer_plugin.cpp  position_observer_plugin.h  position_observer_plugin.json  position_observer_view.h  position_observer_view.ui
examples/radio_time_observer_plugin/: CMakeLists.txt  delayed_broadcaster.cpp  delayed_broadcaster.h  radio_time_logger.cpp  radio_time_logger.h  radio_time_observer_plugin.cpp  radio_time_observer_plugin.h  radio_time_observer_plugin.json  radio_time_observer_plugin.pro  radio_time_observer_view.cpp  radio_time_observer_view.h  radio_time_observer_view.ui  runtime_objects.h
examples/rapi_plugin/: CMakeLists.txt  rapi_plugin.cpp  rapi_plugin.h  rapi_plugin.json  rapi_plugin.pro  rapi_plugin_view.cpp  rapi_plugin_view.h  rapi_plugin_view.ui
examples/simple_plugin/: CMakeLists.txt  simple_plugin.cpp  simple_plugin.h  simple_plugin.pro  simple_plugin_view.h
examples/skydel_default_instrumentation_plugin/: CMakeLists.txt  skydel_default_instrumentation_plugin.cpp  skydel_default_instrumentation_plugin.h  skydel_default_instrumentation_plugin.json  skydel_default_instrumentation_plugin.pro
examples/transmitter_observer_plugin/: CMakeLists.txt  logger.cpp  logger.h  runtime_position_observer.cpp  runtime_position_observer.h  runtime_transmitter_observer.cpp  runtime_transmitter_observer.h  transmitter_observer_plugin.cpp  transmitter_observer_plugin.h  transmitter_observer_plugin.json  transmitter_observer_plugin.pro  transmitter_observer_view.cpp  transmitter_observer_view.h  transmitter_observer_view.ui
include/skydel_plug_ins/: skydel_command_handler.h  skydel_command_handler_access.h  skydel_core_interface.h  skydel_hil_observer_interface.h  skydel_instrumentation_interface.h  skydel_licensing_interface.h  skydel_notifier_interface.h  skydel_plugin.h  skydel_position_observer_interface.h  skydel_radio_time_observer_interface.h  skydel_rapi_access.h  skydel_raw_data_observer_interface.h  skydel_simulator_state_observer_interface.h  skydel_transmitter_observer_interface.h
include/skydel_plug_ins/custom_signal/: skydel_custom_signal_code.h  skydel_custom_signal_factory_interface.h  skydel_custom_signal_interface.h  skydel_custom_signal_nav_msg.h  skydel_custom_signal_types.h
include/skydel_plug_ins/internal/: skydel_command_execution.h  skydel_command_executor.h  skydel_command_handler_interface.h  skydel_rapi_interface.h
source/: source.pro
source/example/: common.pri  example.pro
source/example/imu_plugin/: imu_configuration.cpp  imu_configuration.h  imu_data_format.h  imu_dynamic.cpp  imu_dynamic.h  imu_logger.cpp  imu_logger.h  imu_plugin.cpp  imu_plugin.h  imu_plugin.json  imu_plugin.pro  imu_view.cpp  imu_view.h  imu_view.ui
source/example/position_observer_plugin/: position_logger.cpp  position_logger.h  position_observer_plugin.cpp  position_observer_plugin.h  position_observer_plugin.pro  position_observer_view.cpp  position_observer_view.h
source/example/rapi_plugin/: rapi_plugin.cpp  rapi_plugin.h  rapi_plugin.pro  rapi_plugin_view.cpp  rapi_plugin_view.h  simple_plugin_view.cpp  simple_plugin_view.h  simple_plugin_view.ui
source/example/simple_plugin/: simple_plugin.cpp  simple_plugin.h  simple_plugin.json  simple_plugin.pro
source/example/skydel_default_instrumentation_plugin/: skydel_default_instrumentation_plugin.cpp  skydel_default_instrumentation_plugin.h  skydel_default_instrumentation_plugin.pro
source/example/ublox_receiver_plugin/: ublox_receiver_plugin.cpp  ublox_receiver_plugin.h  ublox_receiver_plugin.json  ublox_receiver_plugin.pro  ublox_receiver_view.cpp  ublox_receiver_view.h  ublox_receiver_view.ui
source/sdk/: skydel_plugin_sdk.pri
source/sdk/include/: skydel_core_interface.h  skydel_licensing_interface.h  skydel_notifier_interface.h  skydel_plugin.h  skydel_position_observer_interface.h  skydel_rapi_access.h  skydel_raw_data_observer_interface.h
source/sdk/include/internal/: skydel_licensing_base.h  skydel_rapi_interface.h
